--- a/ZNews/app/src/main/AndroidManifest.xml
+++ b/ZNews/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.trng.znews">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/logo6"
@@ -10,8 +13,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ZNews">
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name=".Activities.NewsDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activities.MainActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.ZNews.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
