--- a/ZNews/app/build.gradle
+++ b/ZNews/app/build.gradle
@@ -45,4 +45,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.13.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
     implementation 'com.auth0.android:guardian:0.4.0'
+    implementation 'com.loopj.android:android-async-http:1.4.11'
 }
