--- a/ZNews/app/src/main/AndroidManifest.xml
+++ b/ZNews/app/src/main/AndroidManifest.xml
@@ -2,9 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.trng.znews">
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
     <application
         android:allowBackup="true"
         android:icon="@drawable/logo6"
@@ -12,6 +13,12 @@
         android:roundIcon="@drawable/logo6"
         android:supportsRtl="true"
         android:theme="@style/Theme.ZNews">
+        <activity
+            android:name=".Activities.WeatherActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activities.FindCityActivity"
+            android:exported="false" />
         <activity
             android:name=".Activities.NewsDetailActivity"
             android:exported="false" />
